--- a/Random Users/Base.lproj/Main.storyboard
+++ b/Random Users/Base.lproj/Main.storyboard
@@ -24,7 +24,7 @@
                                     <rect key="frame" x="0.0" y="0.0" width="348" height="40.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <stackView opaque="NO" contentMode="scaleToFill" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="sxQ-XS-Zx4">
+                                        <stackView opaque="NO" contentMode="scaleToFill" spacing="30" translatesAutoresizingMaskIntoConstraints="NO" id="sxQ-XS-Zx4">
                                             <rect key="frame" x="30" y="0.0" width="288" height="40.5"/>
                                             <subviews>
                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="jfC-5O-L80">
@@ -35,7 +35,7 @@
                                                     </constraints>
                                                 </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mZ0-py-k4s">
-                                                    <rect key="frame" x="50" y="0.0" width="238" height="40.5"/>
+                                                    <rect key="frame" x="70" y="0.0" width="218" height="40.5"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
@@ -53,7 +53,7 @@
                                 <connections>
                                     <outlet property="imageView" destination="jfC-5O-L80" id="Kh5-YT-C4E"/>
                                     <outlet property="nameLabel" destination="mZ0-py-k4s" id="NpN-HG-ygu"/>
-                                    <segue destination="KnX-he-vub" kind="show" id="M31-Tj-awu"/>
+                                    <segue destination="KnX-he-vub" kind="show" identifier="UserDetailSegue" id="M31-Tj-awu"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -75,14 +75,62 @@
                     <view key="view" contentMode="scaleToFill" id="a39-RG-6k1">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="8k6-YZ-Ihh">
+                                <rect key="frame" x="37.5" y="183.5" width="300" height="300"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="300" id="dAJ-ov-zQF"/>
+                                    <constraint firstAttribute="height" constant="300" id="jlT-av-e2T"/>
+                                </constraints>
+                            </imageView>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="krA-Mh-KP4">
+                                <rect key="frame" x="87.5" y="518.5" width="200" height="120"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cSL-K2-gU6">
+                                        <rect key="frame" x="0.0" y="0.0" width="200" height="33.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="email" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fT7-Ce-AXF">
+                                        <rect key="frame" x="0.0" y="43.5" width="200" height="33"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="phone" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vfJ-fF-dbi">
+                                        <rect key="frame" x="0.0" y="86.5" width="200" height="33.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="200" id="SYj-vu-fcE"/>
+                                    <constraint firstAttribute="height" constant="120" id="uRz-jK-HSW"/>
+                                </constraints>
+                            </stackView>
+                        </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="krA-Mh-KP4" firstAttribute="centerX" secondItem="a39-RG-6k1" secondAttribute="centerX" id="3fn-YZ-Y3m"/>
+                            <constraint firstItem="8k6-YZ-Ihh" firstAttribute="centerY" secondItem="a39-RG-6k1" secondAttribute="centerY" id="9lM-Xg-T2q"/>
+                            <constraint firstItem="krA-Mh-KP4" firstAttribute="top" secondItem="8k6-YZ-Ihh" secondAttribute="bottom" constant="35" id="yHX-t7-oQy"/>
+                            <constraint firstItem="8k6-YZ-Ihh" firstAttribute="centerX" secondItem="a39-RG-6k1" secondAttribute="centerX" id="zjV-QF-EC5"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="hbz-cd-dzr"/>
                     </view>
                     <navigationItem key="navigationItem" id="ASQ-7B-Aff"/>
+                    <connections>
+                        <outlet property="emailLabel" destination="fT7-Ce-AXF" id="jTm-ve-ozT"/>
+                        <outlet property="imageView" destination="8k6-YZ-Ihh" id="VFu-nn-A3e"/>
+                        <outlet property="nameLabel" destination="cSL-K2-gU6" id="cvY-jj-9Kn"/>
+                        <outlet property="phoneLabel" destination="vfJ-fF-dbi" id="tdh-uM-EQl"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="1Rx-e6-XTF" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2015" y="-206"/>
+            <point key="canvasLocation" x="2013.5999999999999" y="-206.44677661169416"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="Bji-ZD-0w2">
