--- a/Random Users/Resources/Base.lproj/Main.storyboard
+++ b/Random Users/Resources/Base.lproj/Main.storyboard
@@ -16,13 +16,40 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="UserCell" id="OAU-VK-6OQ">
-                                <rect key="frame" x="0.0" y="28" width="375" height="43.5"/>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="UserCell" id="OAU-VK-6OQ" customClass="UserTableViewCell" customModule="Random_Users" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="28" width="375" height="110.5"/>
                                 <autoresizingMask key="autoresizingMask"/>
-                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="OAU-VK-6OQ" id="eSg-GF-6y1">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="OAU-VK-6OQ" id="eSg-GF-6y1" customClass="I">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="110.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="dvl-vQ-NwB">
+                                            <rect key="frame" x="5" y="5" width="100" height="100.5"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="100" id="NkR-3F-S4Q"/>
+                                                <constraint firstAttribute="height" constant="100" id="uxL-5T-jK6"/>
+                                            </constraints>
+                                        </imageView>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Veh-8O-gdi">
+                                            <rect key="frame" x="125" y="45" width="42" height="20.5"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstItem="Veh-8O-gdi" firstAttribute="leading" secondItem="dvl-vQ-NwB" secondAttribute="trailing" constant="20" id="5yv-kR-lNx"/>
+                                        <constraint firstItem="dvl-vQ-NwB" firstAttribute="top" secondItem="eSg-GF-6y1" secondAttribute="top" constant="5" id="9SI-ts-baZ"/>
+                                        <constraint firstItem="dvl-vQ-NwB" firstAttribute="leading" secondItem="eSg-GF-6y1" secondAttribute="leading" constant="5" id="PlB-1n-gAI"/>
+                                        <constraint firstAttribute="bottom" secondItem="dvl-vQ-NwB" secondAttribute="bottom" constant="5" id="U7Y-ZD-qDy"/>
+                                        <constraint firstAttribute="bottomMargin" secondItem="Veh-8O-gdi" secondAttribute="bottom" constant="34" id="Yvc-tg-je3"/>
+                                        <constraint firstItem="Veh-8O-gdi" firstAttribute="top" secondItem="eSg-GF-6y1" secondAttribute="topMargin" constant="34" id="pNL-IY-7wR"/>
+                                    </constraints>
                                 </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="nameLabel" destination="Veh-8O-gdi" id="UZR-Gx-kxJ"/>
+                                    <outlet property="userImageView" destination="dvl-vQ-NwB" id="UUm-vB-NLk"/>
+                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
