--- a/Random Users/Resources/Base.lproj/Main.storyboard
+++ b/Random Users/Resources/Base.lproj/Main.storyboard
@@ -1,54 +1,46 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16096" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16096" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="K0b-BB-CHD">
     <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
+        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--Root View Controller-->
         <scene sceneID="DtV-k4-73j">
             <objects>
-                <tableViewController id="k8z-34-598" sceneMemberID="viewController">
+                <tableViewController id="k8z-34-598" customClass="UsersTableViewController" customModule="Random_Users" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="rGA-HE-joA">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="UserCell" id="OAU-VK-6OQ" customClass="UserTableViewCell" customModule="Random_Users" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="28" width="375" height="110.5"/>
+                                <rect key="frame" x="0.0" y="28" width="375" height="43.5"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="OAU-VK-6OQ" id="eSg-GF-6y1" customClass="I">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="110.5"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="dvl-vQ-NwB">
-                                            <rect key="frame" x="5" y="5" width="100" height="100.5"/>
-                                            <constraints>
-                                                <constraint firstAttribute="width" constant="100" id="NkR-3F-S4Q"/>
-                                                <constraint firstAttribute="height" constant="100" id="uxL-5T-jK6"/>
-                                            </constraints>
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="dvl-vQ-NwB">
+                                            <rect key="frame" x="5" y="5" width="35" height="32"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         </imageView>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Veh-8O-gdi">
-                                            <rect key="frame" x="125" y="45" width="42" height="20.5"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Veh-8O-gdi">
+                                            <rect key="frame" x="48" y="5" width="291" height="32"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                     </subviews>
-                                    <constraints>
-                                        <constraint firstItem="Veh-8O-gdi" firstAttribute="leading" secondItem="dvl-vQ-NwB" secondAttribute="trailing" constant="20" id="5yv-kR-lNx"/>
-                                        <constraint firstItem="dvl-vQ-NwB" firstAttribute="top" secondItem="eSg-GF-6y1" secondAttribute="top" constant="5" id="9SI-ts-baZ"/>
-                                        <constraint firstItem="dvl-vQ-NwB" firstAttribute="leading" secondItem="eSg-GF-6y1" secondAttribute="leading" constant="5" id="PlB-1n-gAI"/>
-                                        <constraint firstAttribute="bottom" secondItem="dvl-vQ-NwB" secondAttribute="bottom" constant="5" id="U7Y-ZD-qDy"/>
-                                        <constraint firstAttribute="bottomMargin" secondItem="Veh-8O-gdi" secondAttribute="bottom" constant="34" id="Yvc-tg-je3"/>
-                                        <constraint firstItem="Veh-8O-gdi" firstAttribute="top" secondItem="eSg-GF-6y1" secondAttribute="topMargin" constant="34" id="pNL-IY-7wR"/>
-                                    </constraints>
                                 </tableViewCellContentView>
                                 <connections>
                                     <outlet property="nameLabel" destination="Veh-8O-gdi" id="UZR-Gx-kxJ"/>
                                     <outlet property="userImageView" destination="dvl-vQ-NwB" id="UUm-vB-NLk"/>
+                                    <segue destination="jGD-cJ-93Q" kind="show" identifier="DetailSegue" id="WMh-oz-4kO"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -61,7 +53,68 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Yjp-vX-Emf" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="610" y="-1765"/>
+            <point key="canvasLocation" x="608.79999999999995" y="-1765.3673163418291"/>
+        </scene>
+        <!--User Detail View Controller-->
+        <scene sceneID="pSo-v5-XCQ">
+            <objects>
+                <viewController id="jGD-cJ-93Q" customClass="UserDetailViewController" customModule="Random_Users" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="00l-dt-9yn">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Zgk-6c-Kh0">
+                                <rect key="frame" x="62.5" y="94" width="250" height="250"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="250" id="0P7-EW-D0Z"/>
+                                    <constraint firstAttribute="height" constant="250" id="auC-8T-eo6"/>
+                                </constraints>
+                            </imageView>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="30" translatesAutoresizingMaskIntoConstraints="NO" id="0iK-EG-Eb3">
+                                <rect key="frame" x="20" y="364" width="335" height="131"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="d8Z-Gb-qL5">
+                                        <rect key="frame" x="0.0" y="0.0" width="335" height="30"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="25"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Phone" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="82K-q3-562">
+                                        <rect key="frame" x="0.0" y="60" width="335" height="20.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Email" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RGO-Eb-DwK">
+                                        <rect key="frame" x="0.0" y="110.5" width="335" height="20.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                            </stackView>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="d5k-tH-fQt" firstAttribute="trailing" secondItem="0iK-EG-Eb3" secondAttribute="trailing" constant="20" id="FC5-13-og3"/>
+                            <constraint firstItem="0iK-EG-Eb3" firstAttribute="top" secondItem="Zgk-6c-Kh0" secondAttribute="bottom" constant="20" id="HdE-Q9-Bcg"/>
+                            <constraint firstItem="0iK-EG-Eb3" firstAttribute="leading" secondItem="d5k-tH-fQt" secondAttribute="leading" constant="20" id="QyO-DY-2d2"/>
+                            <constraint firstItem="Zgk-6c-Kh0" firstAttribute="centerX" secondItem="00l-dt-9yn" secondAttribute="centerX" id="hlC-nF-bsF"/>
+                            <constraint firstItem="Zgk-6c-Kh0" firstAttribute="top" secondItem="d5k-tH-fQt" secondAttribute="top" constant="50" id="oTy-6H-f7f"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="d5k-tH-fQt"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="4UK-r7-ddn"/>
+                    <connections>
+                        <outlet property="emailLabel" destination="RGO-Eb-DwK" id="m2A-6Z-NzH"/>
+                        <outlet property="nameLabel" destination="d8Z-Gb-qL5" id="8z8-NP-B51"/>
+                        <outlet property="phoneLabel" destination="82K-q3-562" id="btm-nU-H1i"/>
+                        <outlet property="userImageView" destination="Zgk-6c-Kh0" id="Mo8-RJ-anY"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="13K-C3-9jq" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1492" y="-1765"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="At3-YV-PG0">
